--- a/series.conf
+++ b/series.conf
@@ -13904,6 +13904,7 @@
 	patches.suse/0893-drm-amd-display-Use-optc32-instead-of-optc30-in-DC.patch
 	patches.suse/0894-drm-amd-display-Expand-DML-to-better-support-replay.patch
 	patches.suse/0895-drm-amd-display-Enable-DCN-low-mem-power-by-default.patch
+	patches.suse/0896-drm-amd-display-Drop-unused-link-FPGA-code.patch
 	patches.suse/drm-amdgpu-Increase-IH-soft-ring-size-for-GFX-v9.4.3.patch
 	patches.suse/drm-amdkfd-fix-some-race-conditions-in-vram-buffer-a.patch
 	patches.suse/drm-amdgpu-not-to-save-bo-in-the-case-of-RAS-err_eve.patch
