--- a/series.conf
+++ b/series.conf
@@ -13906,6 +13906,7 @@
 	patches.suse/0895-drm-amd-display-Enable-DCN-low-mem-power-by-default.patch
 	patches.suse/0896-drm-amd-display-Drop-unused-link-FPGA-code.patch
 	patches.suse/0897-drm-amd-display-3.2.252.patch
+	patches.suse/0898-drm-amdgpu-Restore-partition-mode-after-reset.patch
 	patches.suse/drm-amdgpu-Increase-IH-soft-ring-size-for-GFX-v9.4.3.patch
 	patches.suse/drm-amdkfd-fix-some-race-conditions-in-vram-buffer-a.patch
 	patches.suse/drm-amdgpu-not-to-save-bo-in-the-case-of-RAS-err_eve.patch
