--- a/series.conf
+++ b/series.conf
@@ -13911,6 +13911,7 @@
 	patches.suse/0900-gpu-drm-amd-display-fix-kernel-doc-warnings.patch
 	patches.suse/0901-drm-amdgpu-fix-and-cleanup-gmc_v9_0_flush_gpu_tlb.patch
 	patches.suse/0902-drm-amdkfd-Don-t-use-sw-fault-filter-if-retry-cam-en.patch
+	patches.suse/0903-drm-amd-display-fix-some-style-issues.patch
 	patches.suse/drm-amdkfd-fix-some-race-conditions-in-vram-buffer-a.patch
 	patches.suse/drm-amdgpu-not-to-save-bo-in-the-case-of-RAS-err_eve.patch
 	patches.suse/drm-amdkfd-Handle-errors-from-svm-validate-and-map.patch
