drm/amdgpu: fix value of some UMC parameters for UMC v12 (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -13912,6 +13912,7 @@
 	patches.suse/0901-drm-amdgpu-fix-and-cleanup-gmc_v9_0_flush_gpu_tlb.patch
 	patches.suse/0902-drm-amdkfd-Don-t-use-sw-fault-filter-if-retry-cam-en.patch
 	patches.suse/0903-drm-amd-display-fix-some-style-issues.patch
+	patches.suse/0904-drm-amdgpu-fix-value-of-some-UMC-parameters-for-UMC-.patch
 	patches.suse/drm-amdkfd-fix-some-race-conditions-in-vram-buffer-a.patch
 	patches.suse/drm-amdgpu-not-to-save-bo-in-the-case-of-RAS-err_eve.patch
 	patches.suse/drm-amdkfd-Handle-errors-from-svm-validate-and-map.patch
