drm/amdgpu: rework gmc_v10_0_flush_gpu_tlb v2 (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -13914,6 +13914,7 @@
 	patches.suse/0903-drm-amd-display-fix-some-style-issues.patch
 	patches.suse/0904-drm-amdgpu-fix-value-of-some-UMC-parameters-for-UMC-.patch
 	patches.suse/0905-drm-amdgpu-change-if-condition-for-bad-channel-bitma.patch
+	patches.suse/0906-drm-amdgpu-rework-gmc_v10_0_flush_gpu_tlb-v2.patch
 	patches.suse/drm-amdkfd-fix-some-race-conditions-in-vram-buffer-a.patch
 	patches.suse/drm-amdgpu-not-to-save-bo-in-the-case-of-RAS-err_eve.patch
 	patches.suse/drm-amdkfd-Handle-errors-from-svm-validate-and-map.patch
