--- a/series.conf
+++ b/series.conf
@@ -13916,6 +13916,7 @@
 	patches.suse/0905-drm-amdgpu-change-if-condition-for-bad-channel-bitma.patch
 	patches.suse/0906-drm-amdgpu-rework-gmc_v10_0_flush_gpu_tlb-v2.patch
 	patches.suse/0907-drm-amdgpu-cleanup-gmc_v11_0_flush_gpu_tlb.patch
+	patches.suse/0908-drm-amdgpu-fix-and-cleanup-gmc_v7_0_flush_gpu_tlb_pa.patch
 	patches.suse/drm-amdkfd-fix-some-race-conditions-in-vram-buffer-a.patch
 	patches.suse/drm-amdgpu-not-to-save-bo-in-the-case-of-RAS-err_eve.patch
 	patches.suse/drm-amdkfd-Handle-errors-from-svm-validate-and-map.patch
