drm/amdgpu: fix and cleanup gmc_v8_0_flush_gpu_tlb_pasid (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -13917,6 +13917,7 @@
 	patches.suse/0906-drm-amdgpu-rework-gmc_v10_0_flush_gpu_tlb-v2.patch
 	patches.suse/0907-drm-amdgpu-cleanup-gmc_v11_0_flush_gpu_tlb.patch
 	patches.suse/0908-drm-amdgpu-fix-and-cleanup-gmc_v7_0_flush_gpu_tlb_pa.patch
+	patches.suse/0909-drm-amdgpu-fix-and-cleanup-gmc_v8_0_flush_gpu_tlb_pa.patch
 	patches.suse/drm-amdkfd-fix-some-race-conditions-in-vram-buffer-a.patch
 	patches.suse/drm-amdgpu-not-to-save-bo-in-the-case-of-RAS-err_eve.patch
 	patches.suse/drm-amdkfd-Handle-errors-from-svm-validate-and-map.patch
