--- a/series.conf
+++ b/series.conf
@@ -13918,6 +13918,7 @@
 	patches.suse/0907-drm-amdgpu-cleanup-gmc_v11_0_flush_gpu_tlb.patch
 	patches.suse/0908-drm-amdgpu-fix-and-cleanup-gmc_v7_0_flush_gpu_tlb_pa.patch
 	patches.suse/0909-drm-amdgpu-fix-and-cleanup-gmc_v8_0_flush_gpu_tlb_pa.patch
+	patches.suse/0910-drm-amdgpu-fix-and-cleanup-gmc_v9_0_flush_gpu_tlb_pa.patch
 	patches.suse/drm-amdkfd-fix-some-race-conditions-in-vram-buffer-a.patch
 	patches.suse/drm-amdgpu-not-to-save-bo-in-the-case-of-RAS-err_eve.patch
 	patches.suse/drm-amdkfd-Handle-errors-from-svm-validate-and-map.patch
