--- a/series.conf
+++ b/series.conf
@@ -13922,6 +13922,7 @@
 	patches.suse/0911-drm-amdgpu-cleanup-gmc_v10_0_flush_gpu_tlb_pasid.patch
 	patches.suse/0912-drm-amdgpu-fix-and-cleanup-gmc_v11_0_flush_gpu_tlb_p.patch
 	patches.suse/0913-drm-amdgpu-drop-error-return-from-flush_gpu_tlb_pasi.patch
+	patches.suse/0914-drm-amdgpu-rework-lock-handling-for-flush_tlb-v2.patch
 	patches.suse/drm-amdkfd-fix-some-race-conditions-in-vram-buffer-a.patch
 	patches.suse/drm-amdgpu-not-to-save-bo-in-the-case-of-RAS-err_eve.patch
 	patches.suse/drm-amdkfd-Handle-errors-from-svm-validate-and-map.patch
