drm/amdgpu: further move TLB hw workarounds a layer up (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -13923,6 +13923,7 @@
 	patches.suse/0912-drm-amdgpu-fix-and-cleanup-gmc_v11_0_flush_gpu_tlb_p.patch
 	patches.suse/0913-drm-amdgpu-drop-error-return-from-flush_gpu_tlb_pasi.patch
 	patches.suse/0914-drm-amdgpu-rework-lock-handling-for-flush_tlb-v2.patch
+	patches.suse/0915-drm-amdgpu-further-move-TLB-hw-workarounds-a-layer-u.patch
 	patches.suse/drm-amdkfd-fix-some-race-conditions-in-vram-buffer-a.patch
 	patches.suse/drm-amdgpu-not-to-save-bo-in-the-case-of-RAS-err_eve.patch
 	patches.suse/drm-amdkfd-Handle-errors-from-svm-validate-and-map.patch
