--- a/series.conf
+++ b/series.conf
@@ -13924,6 +13924,7 @@
 	patches.suse/0913-drm-amdgpu-drop-error-return-from-flush_gpu_tlb_pasi.patch
 	patches.suse/0914-drm-amdgpu-rework-lock-handling-for-flush_tlb-v2.patch
 	patches.suse/0915-drm-amdgpu-further-move-TLB-hw-workarounds-a-layer-u.patch
+	patches.suse/0916-drm-amdkfd-Move-dma-unmapping-after-TLB-flush.patch
 	patches.suse/drm-amdkfd-fix-some-race-conditions-in-vram-buffer-a.patch
 	patches.suse/drm-amdgpu-not-to-save-bo-in-the-case-of-RAS-err_eve.patch
 	patches.suse/drm-amdkfd-Handle-errors-from-svm-validate-and-map.patch
