--- a/series.conf
+++ b/series.conf
@@ -13927,6 +13927,7 @@
 	patches.suse/0916-drm-amdkfd-Move-dma-unmapping-after-TLB-flush.patch
 	patches.suse/drm-amdkfd-fix-some-race-conditions-in-vram-buffer-a.patch
 	patches.suse/0918-drm-amd-display-remove-unused-mmhub_reg_offsets.patch
+	patches.suse/0919-drm-amd-display-determine-fast-update-only-before-co.patch
 	patches.suse/drm-amdgpu-not-to-save-bo-in-the-case-of-RAS-err_eve.patch
 	patches.suse/drm-amdkfd-Handle-errors-from-svm-validate-and-map.patch
 	patches.suse/drm-amd-display-Fix-null-pointer-dereference-in-erro.patch
