--- a/series.conf
+++ b/series.conf
@@ -13930,6 +13930,7 @@
 	patches.suse/0919-drm-amd-display-determine-fast-update-only-before-co.patch
 	patches.suse/0920-drm-amd-display-reset-stream-slice-count-for-new-ODM.patch
 	patches.suse/0921-drm-amd-display-add-new-windowed-mpo-odm-minimal-tra.patch
+	patches.suse/0922-drm-amd-display-remove-guaranteed-viewports-limitati.patch
 	patches.suse/drm-amdgpu-not-to-save-bo-in-the-case-of-RAS-err_eve.patch
 	patches.suse/drm-amdkfd-Handle-errors-from-svm-validate-and-map.patch
 	patches.suse/drm-amd-display-Fix-null-pointer-dereference-in-erro.patch
