drm/amd/display: Improve x86 and dmub ips handshake (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -13931,6 +13931,7 @@
 	patches.suse/0920-drm-amd-display-reset-stream-slice-count-for-new-ODM.patch
 	patches.suse/0921-drm-amd-display-add-new-windowed-mpo-odm-minimal-tra.patch
 	patches.suse/0922-drm-amd-display-remove-guaranteed-viewports-limitati.patch
+	patches.suse/0923-drm-amd-display-Improve-x86-and-dmub-ips-handshake.patch
 	patches.suse/drm-amdgpu-not-to-save-bo-in-the-case-of-RAS-err_eve.patch
 	patches.suse/drm-amdkfd-Handle-errors-from-svm-validate-and-map.patch
 	patches.suse/drm-amd-display-Fix-null-pointer-dereference-in-erro.patch
