--- a/series.conf
+++ b/series.conf
@@ -13932,6 +13932,7 @@
 	patches.suse/0921-drm-amd-display-add-new-windowed-mpo-odm-minimal-tra.patch
 	patches.suse/0922-drm-amd-display-remove-guaranteed-viewports-limitati.patch
 	patches.suse/0923-drm-amd-display-Improve-x86-and-dmub-ips-handshake.patch
+	patches.suse/0924-drm-amd-display-Fix-DP2.0-timing-sync.patch
 	patches.suse/drm-amdgpu-not-to-save-bo-in-the-case-of-RAS-err_eve.patch
 	patches.suse/drm-amdkfd-Handle-errors-from-svm-validate-and-map.patch
 	patches.suse/drm-amd-display-Fix-null-pointer-dereference-in-erro.patch
