drm/amd/display: Remove unwanted drm edid references (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -13937,6 +13937,7 @@
 	patches.suse/0926-drm-amd-pm-Add-reset-option-for-fan_curve-on-smu13_0.patch
 	patches.suse/0927-drm-amd-display-skip-audio-config-for-virtual-signal.patch
 	patches.suse/0928-drm-amd-display-switch-DC-over-to-the-new-DRM-loggin.patch
+	patches.suse/0929-drm-amd-display-Remove-unwanted-drm-edid-references.patch
 	patches.suse/drm-amdgpu-not-to-save-bo-in-the-case-of-RAS-err_eve.patch
 	patches.suse/drm-amdkfd-Handle-errors-from-svm-validate-and-map.patch
 	patches.suse/drm-amd-display-Fix-null-pointer-dereference-in-erro.patch
