--- a/series.conf
+++ b/series.conf
@@ -13938,6 +13938,7 @@
 	patches.suse/0927-drm-amd-display-skip-audio-config-for-virtual-signal.patch
 	patches.suse/0928-drm-amd-display-switch-DC-over-to-the-new-DRM-loggin.patch
 	patches.suse/0929-drm-amd-display-Remove-unwanted-drm-edid-references.patch
+	patches.suse/0930-drm-amd-display-Improve-code-style-on-bios_parser2.patch
 	patches.suse/drm-amdgpu-not-to-save-bo-in-the-case-of-RAS-err_eve.patch
 	patches.suse/drm-amdkfd-Handle-errors-from-svm-validate-and-map.patch
 	patches.suse/drm-amd-display-Fix-null-pointer-dereference-in-erro.patch
