drm/amdgpu/vpe: fix truncation warnings (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -13939,6 +13939,7 @@
 	patches.suse/0928-drm-amd-display-switch-DC-over-to-the-new-DRM-loggin.patch
 	patches.suse/0929-drm-amd-display-Remove-unwanted-drm-edid-references.patch
 	patches.suse/0930-drm-amd-display-Improve-code-style-on-bios_parser2.patch
+	patches.suse/0931-drm-amdgpu-vpe-fix-truncation-warnings.patch
 	patches.suse/drm-amdgpu-not-to-save-bo-in-the-case-of-RAS-err_eve.patch
 	patches.suse/drm-amdkfd-Handle-errors-from-svm-validate-and-map.patch
 	patches.suse/drm-amd-display-Fix-null-pointer-dereference-in-erro.patch
