--- a/series.conf
+++ b/series.conf
@@ -13940,6 +13940,7 @@
 	patches.suse/0929-drm-amd-display-Remove-unwanted-drm-edid-references.patch
 	patches.suse/0930-drm-amd-display-Improve-code-style-on-bios_parser2.patch
 	patches.suse/0931-drm-amdgpu-vpe-fix-truncation-warnings.patch
+	patches.suse/0932-drm-amd-display-Rename-DisableMinDispClkODM-in-dc_co.patch
 	patches.suse/drm-amdgpu-not-to-save-bo-in-the-case-of-RAS-err_eve.patch
 	patches.suse/drm-amdkfd-Handle-errors-from-svm-validate-and-map.patch
 	patches.suse/drm-amd-display-Fix-null-pointer-dereference-in-erro.patch
