drm/amd/display: add get primary dpp pipe resource interface (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -13942,6 +13942,7 @@
 	patches.suse/0931-drm-amdgpu-vpe-fix-truncation-warnings.patch
 	patches.suse/0932-drm-amd-display-Rename-DisableMinDispClkODM-in-dc_co.patch
 	patches.suse/0933-drm-amd-display-add-missing-function-pointer-for-DCN.patch
+	patches.suse/0934-drm-amd-display-add-get-primary-dpp-pipe-resource-in.patch
 	patches.suse/drm-amdgpu-not-to-save-bo-in-the-case-of-RAS-err_eve.patch
 	patches.suse/drm-amdkfd-Handle-errors-from-svm-validate-and-map.patch
 	patches.suse/drm-amd-display-Fix-null-pointer-dereference-in-erro.patch
