--- a/series.conf
+++ b/series.conf
@@ -13946,6 +13946,7 @@
 	patches.suse/0935-drm-amd-display-add-primary-pipe-check-when-building.patch
 	patches.suse/0936-drm-amd-display-fix-incorrect-odm-change-detection-l.patch
 	patches.suse/0937-drm-amd-display-3.2.253.patch
+	patches.suse/0938-drm-amd-display-augment-display-clock-in-dc_cap-stru.patch
 	patches.suse/drm-amdgpu-not-to-save-bo-in-the-case-of-RAS-err_eve.patch
 	patches.suse/drm-amdkfd-Handle-errors-from-svm-validate-and-map.patch
 	patches.suse/drm-amd-display-Fix-null-pointer-dereference-in-erro.patch
