--- a/series.conf
+++ b/series.conf
@@ -13948,6 +13948,7 @@
 	patches.suse/0937-drm-amd-display-3.2.253.patch
 	patches.suse/0938-drm-amd-display-augment-display-clock-in-dc_cap-stru.patch
 	patches.suse/0939-drm-amd-display-Update-OPP-counter-from-new-interfac.patch
+	patches.suse/0940-drm-amd-display-Break-after-finding-supported-vlevel.patch
 	patches.suse/drm-amdgpu-not-to-save-bo-in-the-case-of-RAS-err_eve.patch
 	patches.suse/drm-amdkfd-Handle-errors-from-svm-validate-and-map.patch
 	patches.suse/drm-amd-display-Fix-null-pointer-dereference-in-erro.patch
