--- a/series.conf
+++ b/series.conf
@@ -13950,6 +13950,7 @@
 	patches.suse/0939-drm-amd-display-Update-OPP-counter-from-new-interfac.patch
 	patches.suse/0940-drm-amd-display-Break-after-finding-supported-vlevel.patch
 	patches.suse/0941-drm-amdgpu-Expose-physical-id-of-device-in-XGMI-hive.patch
+	patches.suse/0942-drm-amdgpu-gmc6-8-properly-disable-the-AGP-aperture.patch
 	patches.suse/drm-amdgpu-not-to-save-bo-in-the-case-of-RAS-err_eve.patch
 	patches.suse/drm-amdkfd-Handle-errors-from-svm-validate-and-map.patch
 	patches.suse/drm-amd-display-Fix-null-pointer-dereference-in-erro.patch
