--- a/series.conf
+++ b/series.conf
@@ -13953,6 +13953,7 @@
 	patches.suse/0942-drm-amdgpu-gmc6-8-properly-disable-the-AGP-aperture.patch
 	patches.suse/0943-drm-amdgpu-gmc-set-a-default-disable-value-for-AGP.patch
 	patches.suse/0944-drm-amd-display-set-stream-gamut-remap-matrix-to-MPC.patch
+	patches.suse/0945-drm-amd-Propagate-failures-in-dc_set_power_state.patch
 	patches.suse/drm-amdgpu-not-to-save-bo-in-the-case-of-RAS-err_eve.patch
 	patches.suse/drm-amdkfd-Handle-errors-from-svm-validate-and-map.patch
 	patches.suse/drm-amd-display-Fix-null-pointer-dereference-in-erro.patch
