--- a/series.conf
+++ b/series.conf
@@ -13956,6 +13956,7 @@
 	patches.suse/0945-drm-amd-Propagate-failures-in-dc_set_power_state.patch
 	patches.suse/drm-amdgpu-not-to-save-bo-in-the-case-of-RAS-err_eve.patch
 	patches.suse/0947-drm-amdgpu-gmc11-disable-AGP-on-GC-11.5.patch
+	patches.suse/0948-drm-amd-display-Change-dc_set_power_state-to-bool-in.patch
 	patches.suse/drm-amdkfd-Handle-errors-from-svm-validate-and-map.patch
 	patches.suse/drm-amd-display-Fix-null-pointer-dereference-in-erro.patch
 	patches.suse/drm-amd-display-Check-all-enabled-planes-in-dm_check.patch
