drm/amd/pm: add plpd_mode in smu_context to indicate current mode (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -13959,6 +13959,7 @@
 	patches.suse/0948-drm-amd-display-Change-dc_set_power_state-to-bool-in.patch
 	patches.suse/0949-drm-amdgpu-Add-description-for-AMD_IP_BLOCK_TYPE_VPE.patch
 	patches.suse/0950-drm-amd-pm-update-pmfw-headers-for-version-85.73.0.patch
+	patches.suse/0951-drm-amd-pm-add-plpd_mode-in-smu_context-to-indicate-.patch
 	patches.suse/drm-amdkfd-Handle-errors-from-svm-validate-and-map.patch
 	patches.suse/drm-amd-display-Fix-null-pointer-dereference-in-erro.patch
 	patches.suse/drm-amd-display-Check-all-enabled-planes-in-dm_check.patch
