--- a/series.conf
+++ b/series.conf
@@ -13960,6 +13960,7 @@
 	patches.suse/0949-drm-amdgpu-Add-description-for-AMD_IP_BLOCK_TYPE_VPE.patch
 	patches.suse/0950-drm-amd-pm-update-pmfw-headers-for-version-85.73.0.patch
 	patches.suse/0951-drm-amd-pm-add-plpd_mode-in-smu_context-to-indicate-.patch
+	patches.suse/0952-drm-amd-pm-add-xgmi-plpd-mode-selecting-interface-fo.patch
 	patches.suse/drm-amdkfd-Handle-errors-from-svm-validate-and-map.patch
 	patches.suse/drm-amd-display-Fix-null-pointer-dereference-in-erro.patch
 	patches.suse/drm-amd-display-Check-all-enabled-planes-in-dm_check.patch
