--- a/series.conf
+++ b/series.conf
@@ -13963,6 +13963,7 @@
 	patches.suse/0952-drm-amd-pm-add-xgmi-plpd-mode-selecting-interface-fo.patch
 	patches.suse/0953-drm-amd-pm-add-xgmi_plpd_policy-sysfs-node-for-user-.patch
 	patches.suse/drm-amdkfd-Handle-errors-from-svm-validate-and-map.patch
+	patches.suse/0955-drm-amd-Drop-error-message-about-failing-to-load-DMU.patch
 	patches.suse/drm-amd-display-Fix-null-pointer-dereference-in-erro.patch
 	patches.suse/drm-amd-display-Check-all-enabled-planes-in-dm_check.patch
 	patches.suse/drm-amdkfd-Fix-a-race-condition-of-vram-buffer-unref.patch
