drm/amd: Limit seamless boot by default to APUs (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -13964,6 +13964,7 @@
 	patches.suse/0953-drm-amd-pm-add-xgmi_plpd_policy-sysfs-node-for-user-.patch
 	patches.suse/drm-amdkfd-Handle-errors-from-svm-validate-and-map.patch
 	patches.suse/0955-drm-amd-Drop-error-message-about-failing-to-load-DMU.patch
+	patches.suse/0956-drm-amd-Limit-seamless-boot-by-default-to-APUs.patch
 	patches.suse/drm-amd-display-Fix-null-pointer-dereference-in-erro.patch
 	patches.suse/drm-amd-display-Check-all-enabled-planes-in-dm_check.patch
 	patches.suse/drm-amdkfd-Fix-a-race-condition-of-vram-buffer-unref.patch
