--- a/series.conf
+++ b/series.conf
@@ -13969,6 +13969,7 @@
 	patches.suse/0958-drm-amd-display-Remove-unused-DPCD-declarations.patch
 	patches.suse/0959-drm-amd-pm-init-plpd_mode-properly-for-different-asi.patch
 	patches.suse/0960-drm-amd-pm-integrate-plpd-allow-disallow-into-select.patch
+	patches.suse/0961-drm-amd-pm-deprecate-allow_xgmi_power_down-interface.patch
 	patches.suse/drm-amd-display-Fix-null-pointer-dereference-in-erro.patch
 	patches.suse/drm-amd-display-Check-all-enabled-planes-in-dm_check.patch
 	patches.suse/drm-amdkfd-Fix-a-race-condition-of-vram-buffer-unref.patch
