drm/amd/pm: fix the print_clk_levels issue for SMU v13.0.6 (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -13970,6 +13970,7 @@
 	patches.suse/0959-drm-amd-pm-init-plpd_mode-properly-for-different-asi.patch
 	patches.suse/0960-drm-amd-pm-integrate-plpd-allow-disallow-into-select.patch
 	patches.suse/0961-drm-amd-pm-deprecate-allow_xgmi_power_down-interface.patch
+	patches.suse/0962-drm-amd-pm-fix-the-print_clk_levels-issue-for-SMU-v1.patch
 	patches.suse/drm-amd-display-Fix-null-pointer-dereference-in-erro.patch
 	patches.suse/drm-amd-display-Check-all-enabled-planes-in-dm_check.patch
 	patches.suse/drm-amdkfd-Fix-a-race-condition-of-vram-buffer-unref.patch
