--- a/series.conf
+++ b/series.conf
@@ -13971,6 +13971,7 @@
 	patches.suse/0960-drm-amd-pm-integrate-plpd-allow-disallow-into-select.patch
 	patches.suse/0961-drm-amd-pm-deprecate-allow_xgmi_power_down-interface.patch
 	patches.suse/0962-drm-amd-pm-fix-the-print_clk_levels-issue-for-SMU-v1.patch
+	patches.suse/0963-drm-amd-Drop-error-message-about-failing-to-load-SDM.patch
 	patches.suse/drm-amd-display-Fix-null-pointer-dereference-in-erro.patch
 	patches.suse/drm-amd-display-Check-all-enabled-planes-in-dm_check.patch
 	patches.suse/drm-amdkfd-Fix-a-race-condition-of-vram-buffer-unref.patch
