--- a/series.conf
+++ b/series.conf
@@ -13975,6 +13975,7 @@
 	patches.suse/0964-drm-amd-display-Create-one-virtual-connector-in-DC.patch
 	patches.suse/drm-amd-display-Fix-null-pointer-dereference-in-erro.patch
 	patches.suse/0966-drm-amd-Move-microcode-init-from-sw_init-to-early_in.patch
+	patches.suse/0967-drm-amd-Move-microcode-init-from-sw_init-to-early_in.patch
 	patches.suse/drm-amd-display-Check-all-enabled-planes-in-dm_check.patch
 	patches.suse/drm-amdkfd-Fix-a-race-condition-of-vram-buffer-unref.patch
 	patches.suse/drm-amdgpu-update-retry-times-for-psp-vmbx-wait.patch
