drm/amd: Move microcode init from sw_init to early_init for SDMA v5.2 (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -13976,6 +13976,7 @@
 	patches.suse/drm-amd-display-Fix-null-pointer-dereference-in-erro.patch
 	patches.suse/0966-drm-amd-Move-microcode-init-from-sw_init-to-early_in.patch
 	patches.suse/0967-drm-amd-Move-microcode-init-from-sw_init-to-early_in.patch
+	patches.suse/0968-drm-amd-Move-microcode-init-from-sw_init-to-early_in.patch
 	patches.suse/drm-amd-display-Check-all-enabled-planes-in-dm_check.patch
 	patches.suse/drm-amdkfd-Fix-a-race-condition-of-vram-buffer-unref.patch
 	patches.suse/drm-amdgpu-update-retry-times-for-psp-vmbx-wait.patch
