--- a/series.conf
+++ b/series.conf
@@ -13980,6 +13980,7 @@
 	patches.suse/0969-drm-amd-Move-microcode-init-from-sw_init-to-early_in.patch
 	patches.suse/0970-drm-amd-Move-microcode-init-from-sw_init-to-early_in.patch
 	patches.suse/0971-drm-amd-Move-microcode-init-from-sw_init-to-early_in.patch
+	patches.suse/0972-drm-amd-display-Initialize-writeback-connector.patch
 	patches.suse/drm-amd-display-Check-all-enabled-planes-in-dm_check.patch
 	patches.suse/drm-amdkfd-Fix-a-race-condition-of-vram-buffer-unref.patch
 	patches.suse/drm-amdgpu-update-retry-times-for-psp-vmbx-wait.patch
