--- a/series.conf
+++ b/series.conf
@@ -13983,6 +13983,7 @@
 	patches.suse/0972-drm-amd-display-Initialize-writeback-connector.patch
 	patches.suse/drm-amd-display-Check-all-enabled-planes-in-dm_check.patch
 	patches.suse/drm-amdkfd-Fix-a-race-condition-of-vram-buffer-unref.patch
+	patches.suse/0975-drm-amd-pm-Disallow-managing-power-profiles-on-SRIOV.patch
 	patches.suse/drm-amdgpu-update-retry-times-for-psp-vmbx-wait.patch
 	patches.suse/drm-amd-display-Refactor-dm_get_plane_scale-helper.patch
 	patches.suse/Revert-drm-amd-display-Enable-Replay-for-static-scre.patch
