--- a/series.conf
+++ b/series.conf
@@ -13985,6 +13985,7 @@
 	patches.suse/drm-amdkfd-Fix-a-race-condition-of-vram-buffer-unref.patch
 	patches.suse/0975-drm-amd-pm-Disallow-managing-power-profiles-on-SRIOV.patch
 	patches.suse/0976-drm-amdgpu-exit-directly-if-gpu-reset-fails.patch
+	patches.suse/0977-drm-amd-display-Skip-writeback-connector-when-we-get.patch
 	patches.suse/drm-amdgpu-update-retry-times-for-psp-vmbx-wait.patch
 	patches.suse/drm-amd-display-Refactor-dm_get_plane_scale-helper.patch
 	patches.suse/Revert-drm-amd-display-Enable-Replay-for-static-scre.patch
