--- a/series.conf
+++ b/series.conf
@@ -13987,6 +13987,7 @@
 	patches.suse/0976-drm-amdgpu-exit-directly-if-gpu-reset-fails.patch
 	patches.suse/0977-drm-amd-display-Skip-writeback-connector-when-we-get.patch
 	patches.suse/drm-amdgpu-update-retry-times-for-psp-vmbx-wait.patch
+	patches.suse/0979-drm-amdkfd-reduce-stack-size-in-kfd_topology_add_dev.patch
 	patches.suse/drm-amd-display-Refactor-dm_get_plane_scale-helper.patch
 	patches.suse/Revert-drm-amd-display-Enable-Replay-for-static-scre.patch
 	patches.suse/drm-amd-display-Bail-from-dm_check_crtc_cursor-if-no.patch
