drm/amdkfd: drop struct kfd_cu_info (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -13989,6 +13989,7 @@
 	patches.suse/drm-amdgpu-update-retry-times-for-psp-vmbx-wait.patch
 	patches.suse/0979-drm-amdkfd-reduce-stack-size-in-kfd_topology_add_dev.patch
 	patches.suse/0980-drm-amd-display-Return-drm_connector-from-find_first.patch
+	patches.suse/0981-drm-amdkfd-drop-struct-kfd_cu_info.patch
 	patches.suse/drm-amd-display-Refactor-dm_get_plane_scale-helper.patch
 	patches.suse/Revert-drm-amd-display-Enable-Replay-for-static-scre.patch
 	patches.suse/drm-amd-display-Bail-from-dm_check_crtc_cursor-if-no.patch
