--- a/series.conf
+++ b/series.conf
@@ -13991,6 +13991,7 @@
 	patches.suse/0980-drm-amd-display-Return-drm_connector-from-find_first.patch
 	patches.suse/0981-drm-amdkfd-drop-struct-kfd_cu_info.patch
 	patches.suse/0982-drm-amd-display-Use-drm_connector-in-create_stream_f.patch
+	patches.suse/0983-drm-amd-pm-delete-dead-code.patch
 	patches.suse/drm-amd-display-Refactor-dm_get_plane_scale-helper.patch
 	patches.suse/Revert-drm-amd-display-Enable-Replay-for-static-scre.patch
 	patches.suse/drm-amd-display-Bail-from-dm_check_crtc_cursor-if-no.patch
