--- a/series.conf
+++ b/series.conf
@@ -13993,6 +13993,7 @@
 	patches.suse/0982-drm-amd-display-Use-drm_connector-in-create_stream_f.patch
 	patches.suse/0983-drm-amd-pm-delete-dead-code.patch
 	patches.suse/0984-drm-amd-display-Address-srf_updates-not-described-in.patch
+	patches.suse/0985-drm-amd-display-Use-drm_connector-in-create_validate.patch
 	patches.suse/drm-amd-display-Refactor-dm_get_plane_scale-helper.patch
 	patches.suse/Revert-drm-amd-display-Enable-Replay-for-static-scre.patch
 	patches.suse/drm-amd-display-Bail-from-dm_check_crtc_cursor-if-no.patch
