drm/amd/display: Hande writeback request from userspace (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -13996,6 +13996,7 @@
 	patches.suse/0985-drm-amd-display-Use-drm_connector-in-create_validate.patch
 	patches.suse/0986-drm-amd-display-Create-amdgpu_dm_wb_connector.patch
 	patches.suse/0987-drm-amd-display-Create-fake-sink-and-stream-for-writ.patch
+	patches.suse/0988-drm-amd-display-Hande-writeback-request-from-userspa.patch
 	patches.suse/drm-amd-display-Refactor-dm_get_plane_scale-helper.patch
 	patches.suse/Revert-drm-amd-display-Enable-Replay-for-static-scre.patch
 	patches.suse/drm-amd-display-Bail-from-dm_check_crtc_cursor-if-no.patch
