--- a/series.conf
+++ b/series.conf
@@ -13998,6 +13998,7 @@
 	patches.suse/0987-drm-amd-display-Create-fake-sink-and-stream-for-writ.patch
 	patches.suse/0988-drm-amd-display-Hande-writeback-request-from-userspa.patch
 	patches.suse/0989-drm-amd-display-Add-writeback-enable-disable-in-dc.patch
+	patches.suse/0990-drm-amd-display-Fix-writeback_info-never-got-updated.patch
 	patches.suse/drm-amd-display-Refactor-dm_get_plane_scale-helper.patch
 	patches.suse/Revert-drm-amd-display-Enable-Replay-for-static-scre.patch
 	patches.suse/drm-amd-display-Bail-from-dm_check_crtc_cursor-if-no.patch
