--- a/series.conf
+++ b/series.conf
@@ -14001,6 +14001,7 @@
 	patches.suse/0990-drm-amd-display-Fix-writeback_info-never-got-updated.patch
 	patches.suse/0991-drm-amd-display-Validate-hw_points_num-before-using-.patch
 	patches.suse/0992-drm-amd-display-Fix-writeback_info-is-not-removed.patch
+	patches.suse/0993-drm-amd-display-Add-writeback-enable-field-wb_enable.patch
 	patches.suse/drm-amd-display-Refactor-dm_get_plane_scale-helper.patch
 	patches.suse/Revert-drm-amd-display-Enable-Replay-for-static-scre.patch
 	patches.suse/drm-amd-display-Bail-from-dm_check_crtc_cursor-if-no.patch
