--- a/series.conf
+++ b/series.conf
@@ -14003,6 +14003,7 @@
 	patches.suse/0992-drm-amd-display-Fix-writeback_info-is-not-removed.patch
 	patches.suse/0993-drm-amd-display-Add-writeback-enable-field-wb_enable.patch
 	patches.suse/0994-drm-amd-display-Setup-for-mmhubbub3_warmup_mcif-with.patch
+	patches.suse/0995-drm-amd-display-Add-new-set_fc_enable-to-struct-dwbc.patch
 	patches.suse/drm-amd-display-Refactor-dm_get_plane_scale-helper.patch
 	patches.suse/Revert-drm-amd-display-Enable-Replay-for-static-scre.patch
 	patches.suse/drm-amd-display-Bail-from-dm_check_crtc_cursor-if-no.patch
