--- a/series.conf
+++ b/series.conf
@@ -14007,6 +14007,7 @@
 	patches.suse/0996-drm-amd-display-Disable-DWB-frame-capture-to-emulate.patch
 	patches.suse/0997-drm-amdgpu-correct-gpu-clock-counter-query-on-cyan-s.patch
 	patches.suse/0998-drm-amd-display-fix-problems-in-power_helper.patch
+	patches.suse/0999-drm-amdgpu-gmc-add-a-way-to-force-a-particular-place.patch
 	patches.suse/drm-amd-display-Refactor-dm_get_plane_scale-helper.patch
 	patches.suse/Revert-drm-amd-display-Enable-Replay-for-static-scre.patch
 	patches.suse/drm-amd-display-Bail-from-dm_check_crtc_cursor-if-no.patch
