--- a/series.conf
+++ b/series.conf
@@ -14009,6 +14009,7 @@
 	patches.suse/0998-drm-amd-display-fix-problems-in-power_helper.patch
 	patches.suse/0999-drm-amdgpu-gmc-add-a-way-to-force-a-particular-place.patch
 	patches.suse/1000-drm-amdgpu-gmc11-set-gart-placement-GC11.patch
+	patches.suse/1001-drm-amdgpu-Rework-KFD-memory-max-limits.patch
 	patches.suse/drm-amd-display-Refactor-dm_get_plane_scale-helper.patch
 	patches.suse/Revert-drm-amd-display-Enable-Replay-for-static-scre.patch
 	patches.suse/drm-amd-display-Bail-from-dm_check_crtc_cursor-if-no.patch
