--- a/series.conf
+++ b/series.conf
@@ -14010,6 +14010,7 @@
 	patches.suse/0999-drm-amdgpu-gmc-add-a-way-to-force-a-particular-place.patch
 	patches.suse/1000-drm-amdgpu-gmc11-set-gart-placement-GC11.patch
 	patches.suse/1001-drm-amdgpu-Rework-KFD-memory-max-limits.patch
+	patches.suse/1002-drm-amdgpu-Use-ttm_pages_limit-to-override-vram-repo.patch
 	patches.suse/drm-amd-display-Refactor-dm_get_plane_scale-helper.patch
 	patches.suse/Revert-drm-amd-display-Enable-Replay-for-static-scre.patch
 	patches.suse/drm-amd-display-Bail-from-dm_check_crtc_cursor-if-no.patch
