--- a/series.conf
+++ b/series.conf
@@ -14012,6 +14012,7 @@
 	patches.suse/1001-drm-amdgpu-Rework-KFD-memory-max-limits.patch
 	patches.suse/1002-drm-amdgpu-Use-ttm_pages_limit-to-override-vram-repo.patch
 	patches.suse/drm-amd-display-Refactor-dm_get_plane_scale-helper.patch
+	patches.suse/1004-drm-amdgpu-add-cached-GPU-fault-structure-to-vm-stru.patch
 	patches.suse/Revert-drm-amd-display-Enable-Replay-for-static-scre.patch
 	patches.suse/drm-amd-display-Bail-from-dm_check_crtc_cursor-if-no.patch
 	patches.suse/drm-amd-Update-update_pcie_parameters-functions-to-u.patch
