drm/amdgpu: cache gpuvm fault information for gmc7+ (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -14013,6 +14013,7 @@
 	patches.suse/1002-drm-amdgpu-Use-ttm_pages_limit-to-override-vram-repo.patch
 	patches.suse/drm-amd-display-Refactor-dm_get_plane_scale-helper.patch
 	patches.suse/1004-drm-amdgpu-add-cached-GPU-fault-structure-to-vm-stru.patch
+	patches.suse/1005-drm-amdgpu-cache-gpuvm-fault-information-for-gmc7.patch
 	patches.suse/Revert-drm-amd-display-Enable-Replay-for-static-scre.patch
 	patches.suse/drm-amd-display-Bail-from-dm_check_crtc_cursor-if-no.patch
 	patches.suse/drm-amd-Update-update_pcie_parameters-functions-to-u.patch
