drm/amd: Drop all hand-built MIN and MAX macros in the amdgpu base (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -14017,6 +14017,7 @@
 	patches.suse/Revert-drm-amd-display-Enable-Replay-for-static-scre.patch
 	patches.suse/drm-amd-display-Bail-from-dm_check_crtc_cursor-if-no.patch
 	patches.suse/drm-amd-Update-update_pcie_parameters-functions-to-u.patch
+	patches.suse/1009-drm-amd-Drop-all-hand-built-MIN-and-MAX-macros-in-th.patch
 	patches.suse/drm-amd-display-Add-Null-check-for-DPP-resource.patch
 	patches.suse/drm-amd-display-refactor-ILR-to-make-it-work.patch
 	patches.suse/drm-amd-display-use-full-update-for-clip-size-increa.patch
