drm/amdgpu: ratelimited override pte flags messages (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -14019,6 +14019,7 @@
 	patches.suse/drm-amd-Update-update_pcie_parameters-functions-to-u.patch
 	patches.suse/1009-drm-amd-Drop-all-hand-built-MIN-and-MAX-macros-in-th.patch
 	patches.suse/drm-amd-display-Add-Null-check-for-DPP-resource.patch
+	patches.suse/1011-drm-amdgpu-ratelimited-override-pte-flags-messages.patch
 	patches.suse/drm-amd-display-refactor-ILR-to-make-it-work.patch
 	patches.suse/drm-amd-display-use-full-update-for-clip-size-increa.patch
 	patches.suse/drm-amd-Fix-UBSAN-array-index-out-of-bounds-for-SMU7.patch
