--- a/series.conf
+++ b/series.conf
@@ -14020,6 +14020,7 @@
 	patches.suse/1009-drm-amd-Drop-all-hand-built-MIN-and-MAX-macros-in-th.patch
 	patches.suse/drm-amd-display-Add-Null-check-for-DPP-resource.patch
 	patches.suse/1011-drm-amdgpu-ratelimited-override-pte-flags-messages.patch
+	patches.suse/1012-drm-amdkfd-Fix-EXT_COHERENT-memory-allocation-crash.patch
 	patches.suse/drm-amd-display-refactor-ILR-to-make-it-work.patch
 	patches.suse/drm-amd-display-use-full-update-for-clip-size-increa.patch
 	patches.suse/drm-amd-Fix-UBSAN-array-index-out-of-bounds-for-SMU7.patch
