--- a/series.conf
+++ b/series.conf
@@ -14024,6 +14024,7 @@
 	patches.suse/1013-drm-amd-display-enable-dsc_clk-even-if-dsc_pg-disabl.patch
 	patches.suse/1014-drm-amd-display-remove-duplicated-edp-relink-to-fast.patch
 	patches.suse/drm-amd-display-refactor-ILR-to-make-it-work.patch
+	patches.suse/1016-drm-amd-display-Make-driver-backwards-compatible-wit.patch
 	patches.suse/drm-amd-display-use-full-update-for-clip-size-increa.patch
 	patches.suse/drm-amd-Fix-UBSAN-array-index-out-of-bounds-for-SMU7.patch
 	patches.suse/drm-amd-Fix-UBSAN-array-index-out-of-bounds-for-Pola.patch
