--- a/series.conf
+++ b/series.conf
@@ -14025,6 +14025,7 @@
 	patches.suse/1014-drm-amd-display-remove-duplicated-edp-relink-to-fast.patch
 	patches.suse/drm-amd-display-refactor-ILR-to-make-it-work.patch
 	patches.suse/1016-drm-amd-display-Make-driver-backwards-compatible-wit.patch
+	patches.suse/1017-drm-amd-display-Clean-up-code-warnings.patch
 	patches.suse/drm-amd-display-use-full-update-for-clip-size-increa.patch
 	patches.suse/drm-amd-Fix-UBSAN-array-index-out-of-bounds-for-SMU7.patch
 	patches.suse/drm-amd-Fix-UBSAN-array-index-out-of-bounds-for-Pola.patch
