--- a/series.conf
+++ b/series.conf
@@ -14027,6 +14027,7 @@
 	patches.suse/1016-drm-amd-display-Make-driver-backwards-compatible-wit.patch
 	patches.suse/1017-drm-amd-display-Clean-up-code-warnings.patch
 	patches.suse/drm-amd-display-use-full-update-for-clip-size-increa.patch
+	patches.suse/1019-drm-amd-display-Add-a-check-for-idle-power-optimizat.patch
 	patches.suse/drm-amd-Fix-UBSAN-array-index-out-of-bounds-for-SMU7.patch
 	patches.suse/drm-amd-Fix-UBSAN-array-index-out-of-bounds-for-Pola.patch
 	patches.suse/drm-amdgpu-Fix-potential-null-pointer-derefernce.patch
