drm/amd/display: Adjust code style for dmub_cmd.h (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -14029,6 +14029,7 @@
 	patches.suse/drm-amd-display-use-full-update-for-clip-size-increa.patch
 	patches.suse/1019-drm-amd-display-Add-a-check-for-idle-power-optimizat.patch
 	patches.suse/1020-drm-amd-display-Update-DMUB-cmd-header.patch
+	patches.suse/1021-drm-amd-display-Adjust-code-style-for-dmub_cmd.h.patch
 	patches.suse/drm-amd-Fix-UBSAN-array-index-out-of-bounds-for-SMU7.patch
 	patches.suse/drm-amd-Fix-UBSAN-array-index-out-of-bounds-for-Pola.patch
 	patches.suse/drm-amdgpu-Fix-potential-null-pointer-derefernce.patch
