--- a/series.conf
+++ b/series.conf
@@ -14030,6 +14030,7 @@
 	patches.suse/1019-drm-amd-display-Add-a-check-for-idle-power-optimizat.patch
 	patches.suse/1020-drm-amd-display-Update-DMUB-cmd-header.patch
 	patches.suse/1021-drm-amd-display-Adjust-code-style-for-dmub_cmd.h.patch
+	patches.suse/1022-drm-amd-display-Adjust-code-style-for-hw_sequencer.h.patch
 	patches.suse/drm-amd-Fix-UBSAN-array-index-out-of-bounds-for-SMU7.patch
 	patches.suse/drm-amd-Fix-UBSAN-array-index-out-of-bounds-for-Pola.patch
 	patches.suse/drm-amdgpu-Fix-potential-null-pointer-derefernce.patch
