drm/amd/pm: Add GC v9.4.3 thermal limits to hwmon (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -14033,6 +14033,7 @@
 	patches.suse/1022-drm-amd-display-Adjust-code-style-for-hw_sequencer.h.patch
 	patches.suse/1023-drm-amd-display-3.2.254.patch
 	patches.suse/1024-drm-amd-pm-Add-throttle-limit-for-SMU-v13.0.6.patch
+	patches.suse/1025-drm-amd-pm-Add-GC-v9.4.3-thermal-limits-to-hwmon.patch
 	patches.suse/drm-amd-Fix-UBSAN-array-index-out-of-bounds-for-SMU7.patch
 	patches.suse/drm-amd-Fix-UBSAN-array-index-out-of-bounds-for-Pola.patch
 	patches.suse/drm-amdgpu-Fix-potential-null-pointer-derefernce.patch
