--- a/series.conf
+++ b/series.conf
@@ -14034,6 +14034,7 @@
 	patches.suse/1023-drm-amd-display-3.2.254.patch
 	patches.suse/1024-drm-amd-pm-Add-throttle-limit-for-SMU-v13.0.6.patch
 	patches.suse/1025-drm-amd-pm-Add-GC-v9.4.3-thermal-limits-to-hwmon.patch
+	patches.suse/1026-drm-amdgpu-add-new-INFO-ioctl-query-for-the-last-GPU.patch
 	patches.suse/drm-amd-Fix-UBSAN-array-index-out-of-bounds-for-SMU7.patch
 	patches.suse/drm-amd-Fix-UBSAN-array-index-out-of-bounds-for-Pola.patch
 	patches.suse/drm-amdgpu-Fix-potential-null-pointer-derefernce.patch
