--- a/series.conf
+++ b/series.conf
@@ -14035,6 +14035,7 @@
 	patches.suse/1024-drm-amd-pm-Add-throttle-limit-for-SMU-v13.0.6.patch
 	patches.suse/1025-drm-amd-pm-Add-GC-v9.4.3-thermal-limits-to-hwmon.patch
 	patches.suse/1026-drm-amdgpu-add-new-INFO-ioctl-query-for-the-last-GPU.patch
+	patches.suse/1027-drm-amdgpu-refine-fault-cache-updates.patch
 	patches.suse/drm-amd-Fix-UBSAN-array-index-out-of-bounds-for-SMU7.patch
 	patches.suse/drm-amd-Fix-UBSAN-array-index-out-of-bounds-for-Pola.patch
 	patches.suse/drm-amdgpu-Fix-potential-null-pointer-derefernce.patch
