drm/amdgpu: amdgpu_drm.h: fix comment typos (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -14036,6 +14036,7 @@
 	patches.suse/1025-drm-amd-pm-Add-GC-v9.4.3-thermal-limits-to-hwmon.patch
 	patches.suse/1026-drm-amdgpu-add-new-INFO-ioctl-query-for-the-last-GPU.patch
 	patches.suse/1027-drm-amdgpu-refine-fault-cache-updates.patch
+	patches.suse/1028-drm-amdgpu-amdgpu_drm.h-fix-comment-typos.patch
 	patches.suse/drm-amd-Fix-UBSAN-array-index-out-of-bounds-for-SMU7.patch
 	patches.suse/drm-amd-Fix-UBSAN-array-index-out-of-bounds-for-Pola.patch
 	patches.suse/drm-amdgpu-Fix-potential-null-pointer-derefernce.patch
