drm/amd/display: Remove migrate_en/dis from dc_fpu_begin(). (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -14037,6 +14037,7 @@
 	patches.suse/1026-drm-amdgpu-add-new-INFO-ioctl-query-for-the-last-GPU.patch
 	patches.suse/1027-drm-amdgpu-refine-fault-cache-updates.patch
 	patches.suse/1028-drm-amdgpu-amdgpu_drm.h-fix-comment-typos.patch
+	patches.suse/1029-drm-amd-display-Remove-migrate_en-dis-from-dc_fpu_be.patch
 	patches.suse/drm-amd-Fix-UBSAN-array-index-out-of-bounds-for-SMU7.patch
 	patches.suse/drm-amd-Fix-UBSAN-array-index-out-of-bounds-for-Pola.patch
 	patches.suse/drm-amdgpu-Fix-potential-null-pointer-derefernce.patch
