--- a/series.conf
+++ b/series.conf
@@ -14038,6 +14038,7 @@
 	patches.suse/1027-drm-amdgpu-refine-fault-cache-updates.patch
 	patches.suse/1028-drm-amdgpu-amdgpu_drm.h-fix-comment-typos.patch
 	patches.suse/1029-drm-amd-display-Remove-migrate_en-dis-from-dc_fpu_be.patch
+	patches.suse/1030-drm-amd-display-Simplify-the-per-CPU-usage.patch
 	patches.suse/drm-amd-Fix-UBSAN-array-index-out-of-bounds-for-SMU7.patch
 	patches.suse/drm-amd-Fix-UBSAN-array-index-out-of-bounds-for-Pola.patch
 	patches.suse/drm-amdgpu-Fix-potential-null-pointer-derefernce.patch
