drm/amdgpu: Fix complex macros error (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -14040,6 +14040,7 @@
 	patches.suse/1029-drm-amd-display-Remove-migrate_en-dis-from-dc_fpu_be.patch
 	patches.suse/1030-drm-amd-display-Simplify-the-per-CPU-usage.patch
 	patches.suse/1031-drm-amdkfd-Use-partial-migrations-in-GPU-page-faults.patch
+	patches.suse/1032-drm-amdgpu-Fix-complex-macros-error.patch
 	patches.suse/drm-amd-Fix-UBSAN-array-index-out-of-bounds-for-SMU7.patch
 	patches.suse/drm-amd-Fix-UBSAN-array-index-out-of-bounds-for-Pola.patch
 	patches.suse/drm-amdgpu-Fix-potential-null-pointer-derefernce.patch
