--- a/series.conf
+++ b/series.conf
@@ -14041,6 +14041,7 @@
 	patches.suse/1030-drm-amd-display-Simplify-the-per-CPU-usage.patch
 	patches.suse/1031-drm-amdkfd-Use-partial-migrations-in-GPU-page-faults.patch
 	patches.suse/1032-drm-amdgpu-Fix-complex-macros-error.patch
+	patches.suse/1033-drm-amdgpu-Move-package-type-enum-to-amdgpu_smuio.patch
 	patches.suse/drm-amd-Fix-UBSAN-array-index-out-of-bounds-for-SMU7.patch
 	patches.suse/drm-amd-Fix-UBSAN-array-index-out-of-bounds-for-Pola.patch
 	patches.suse/drm-amdgpu-Fix-potential-null-pointer-derefernce.patch
