--- a/series.conf
+++ b/series.conf
@@ -14043,6 +14043,7 @@
 	patches.suse/1032-drm-amdgpu-Fix-complex-macros-error.patch
 	patches.suse/1033-drm-amdgpu-Move-package-type-enum-to-amdgpu_smuio.patch
 	patches.suse/1034-drm-amd-pm-Remove-set-df-cstate-for-SMUv13.0.6.patch
+	patches.suse/1035-drm-amdgpu-fix-ip-count-query-for-xcp-partitions.patch
 	patches.suse/drm-amd-Fix-UBSAN-array-index-out-of-bounds-for-SMU7.patch
 	patches.suse/drm-amd-Fix-UBSAN-array-index-out-of-bounds-for-Pola.patch
 	patches.suse/drm-amdgpu-Fix-potential-null-pointer-derefernce.patch
