--- a/series.conf
+++ b/series.conf
@@ -14046,6 +14046,7 @@
 	patches.suse/1035-drm-amdgpu-fix-ip-count-query-for-xcp-partitions.patch
 	patches.suse/1036-drm-amdgpu-Add-more-smuio-v13.0.3-package-types.patch
 	patches.suse/1037-drm-amdgpu-Get-package-types-for-smuio-v13.0.patch
+	patches.suse/1038-drm-amdgpu-Add-sysfs-attribute-to-get-board-info.patch
 	patches.suse/drm-amd-Fix-UBSAN-array-index-out-of-bounds-for-SMU7.patch
 	patches.suse/drm-amd-Fix-UBSAN-array-index-out-of-bounds-for-Pola.patch
 	patches.suse/drm-amdgpu-Fix-potential-null-pointer-derefernce.patch
