Documentation/amdgpu: Add board info details (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -14047,6 +14047,7 @@
 	patches.suse/1036-drm-amdgpu-Add-more-smuio-v13.0.3-package-types.patch
 	patches.suse/1037-drm-amdgpu-Get-package-types-for-smuio-v13.0.patch
 	patches.suse/1038-drm-amdgpu-Add-sysfs-attribute-to-get-board-info.patch
+	patches.suse/1039-Documentation-amdgpu-Add-board-info-details.patch
 	patches.suse/drm-amd-Fix-UBSAN-array-index-out-of-bounds-for-SMU7.patch
 	patches.suse/drm-amd-Fix-UBSAN-array-index-out-of-bounds-for-Pola.patch
 	patches.suse/drm-amdgpu-Fix-potential-null-pointer-derefernce.patch
