--- a/series.conf
+++ b/series.conf
@@ -14054,6 +14054,7 @@
 	patches.suse/1043-drm-radeon-Fix-UBSAN-array-index-out-of-bounds-for-R.patch
 	patches.suse/drm-amd-Fix-UBSAN-array-index-out-of-bounds-for-Pola.patch
 	patches.suse/1045-drm-amd-display-Add-a-warning-if-the-FPU-is-used-out.patch
+	patches.suse/1046-drm-amd-display-Move-the-memory-allocation-out-of-dc.patch
 	patches.suse/drm-amdgpu-Fix-potential-null-pointer-derefernce.patch
 	patches.suse/drm-amd-display-Don-t-use-fsleep-for-PSR-exit-waits.patch
 	patches.suse/drm-amdkfd-get-doorbell-s-absolute-offset-based-on-t.patch
