drm/amdgpu: Enable SMU 13.0.0 optimizations when ROCm is active (v2) (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -14056,6 +14056,7 @@
 	patches.suse/1045-drm-amd-display-Add-a-warning-if-the-FPU-is-used-out.patch
 	patches.suse/1046-drm-amd-display-Move-the-memory-allocation-out-of-dc.patch
 	patches.suse/1047-drm-amd-display-Move-the-memory-allocation-out-of-dc.patch
+	patches.suse/1048-drm-amdgpu-Enable-SMU-13.0.0-optimizations-when-ROCm.patch
 	patches.suse/drm-amdgpu-Fix-potential-null-pointer-derefernce.patch
 	patches.suse/drm-amd-display-Don-t-use-fsleep-for-PSR-exit-waits.patch
 	patches.suse/drm-amdkfd-get-doorbell-s-absolute-offset-based-on-t.patch
