--- a/series.conf
+++ b/series.conf
@@ -14057,6 +14057,7 @@
 	patches.suse/1046-drm-amd-display-Move-the-memory-allocation-out-of-dc.patch
 	patches.suse/1047-drm-amd-display-Move-the-memory-allocation-out-of-dc.patch
 	patches.suse/1048-drm-amdgpu-Enable-SMU-13.0.0-optimizations-when-ROCm.patch
+	patches.suse/1049-drm-amd-display-Move-dce_calcs-from-DML-folder.patch
 	patches.suse/drm-amdgpu-Fix-potential-null-pointer-derefernce.patch
 	patches.suse/drm-amd-display-Don-t-use-fsleep-for-PSR-exit-waits.patch
 	patches.suse/drm-amdkfd-get-doorbell-s-absolute-offset-based-on-t.patch
