drm/amd/display: Move custom_float from DML folder (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -14058,6 +14058,7 @@
 	patches.suse/1047-drm-amd-display-Move-the-memory-allocation-out-of-dc.patch
 	patches.suse/1048-drm-amdgpu-Enable-SMU-13.0.0-optimizations-when-ROCm.patch
 	patches.suse/1049-drm-amd-display-Move-dce_calcs-from-DML-folder.patch
+	patches.suse/1050-drm-amd-display-Move-custom_float-from-DML-folder.patch
 	patches.suse/drm-amdgpu-Fix-potential-null-pointer-derefernce.patch
 	patches.suse/drm-amd-display-Don-t-use-fsleep-for-PSR-exit-waits.patch
 	patches.suse/drm-amdkfd-get-doorbell-s-absolute-offset-based-on-t.patch
