--- a/series.conf
+++ b/series.conf
@@ -14060,6 +14060,7 @@
 	patches.suse/1049-drm-amd-display-Move-dce_calcs-from-DML-folder.patch
 	patches.suse/1050-drm-amd-display-Move-custom_float-from-DML-folder.patch
 	patches.suse/1051-drm-amd-display-Move-bw_fixed-from-DML-folder.patch
+	patches.suse/1052-drm-amd-display-Move-dml-code-under-CONFIG_DRM_AMD_D.patch
 	patches.suse/drm-amdgpu-Fix-potential-null-pointer-derefernce.patch
 	patches.suse/drm-amd-display-Don-t-use-fsleep-for-PSR-exit-waits.patch
 	patches.suse/drm-amdkfd-get-doorbell-s-absolute-offset-based-on-t.patch
