--- a/series.conf
+++ b/series.conf
@@ -14063,6 +14063,7 @@
 	patches.suse/1052-drm-amd-display-Move-dml-code-under-CONFIG_DRM_AMD_D.patch
 	patches.suse/1053-drm-amd-display-Introduce-DML2.patch
 	patches.suse/1054-drm-amd-display-Add-DCN35-DML2-support.patch
+	patches.suse/1055-drm-amd-display-Add-z8_marks-in-dml.patch
 	patches.suse/drm-amdgpu-Fix-potential-null-pointer-derefernce.patch
 	patches.suse/drm-amd-display-Don-t-use-fsleep-for-PSR-exit-waits.patch
 	patches.suse/drm-amdkfd-get-doorbell-s-absolute-offset-based-on-t.patch
