drm/amd/display: Use fixed DET Buffer Size (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -14065,6 +14065,7 @@
 	patches.suse/1054-drm-amd-display-Add-DCN35-DML2-support.patch
 	patches.suse/1055-drm-amd-display-Add-z8_marks-in-dml.patch
 	patches.suse/1056-drm-amd-display-Handle-multiple-streams-sourcing-sam.patch
+	patches.suse/1057-drm-amd-display-Use-fixed-DET-Buffer-Size.patch
 	patches.suse/drm-amdgpu-Fix-potential-null-pointer-derefernce.patch
 	patches.suse/drm-amd-display-Don-t-use-fsleep-for-PSR-exit-waits.patch
 	patches.suse/drm-amdkfd-get-doorbell-s-absolute-offset-based-on-t.patch
