--- a/series.conf
+++ b/series.conf
@@ -14069,6 +14069,7 @@
 	patches.suse/1058-drm-amd-display-Split-pipe-for-stereo-timings.patch
 	patches.suse/1059-drm-amd-display-Move-stereo-timing-check-to-helper.patch
 	patches.suse/1060-drm-amd-display-Fix-Chroma-Surface-height-width-init.patch
+	patches.suse/1061-drm-amd-display-correct-dml2-input-and-dlg_refclk.patch
 	patches.suse/drm-amdgpu-Fix-potential-null-pointer-derefernce.patch
 	patches.suse/drm-amd-display-Don-t-use-fsleep-for-PSR-exit-waits.patch
 	patches.suse/drm-amdkfd-get-doorbell-s-absolute-offset-based-on-t.patch
