drm/amd/display: Modify Pipe Selection for Policy for ODM (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -14070,6 +14070,7 @@
 	patches.suse/1059-drm-amd-display-Move-stereo-timing-check-to-helper.patch
 	patches.suse/1060-drm-amd-display-Fix-Chroma-Surface-height-width-init.patch
 	patches.suse/1061-drm-amd-display-correct-dml2-input-and-dlg_refclk.patch
+	patches.suse/1062-drm-amd-display-Modify-Pipe-Selection-for-Policy-for.patch
 	patches.suse/drm-amdgpu-Fix-potential-null-pointer-derefernce.patch
 	patches.suse/drm-amd-display-Don-t-use-fsleep-for-PSR-exit-waits.patch
 	patches.suse/drm-amdkfd-get-doorbell-s-absolute-offset-based-on-t.patch
