--- a/series.conf
+++ b/series.conf
@@ -14072,6 +14072,7 @@
 	patches.suse/1061-drm-amd-display-correct-dml2-input-and-dlg_refclk.patch
 	patches.suse/1062-drm-amd-display-Modify-Pipe-Selection-for-Policy-for.patch
 	patches.suse/1063-drm-amd-display-Port-replay-vblank-logic-to-DML2.patch
+	patches.suse/1064-drm-amd-display-add-check-in-validate_only-in-dml2.patch
 	patches.suse/drm-amdgpu-Fix-potential-null-pointer-derefernce.patch
 	patches.suse/drm-amd-display-Don-t-use-fsleep-for-PSR-exit-waits.patch
 	patches.suse/drm-amdkfd-get-doorbell-s-absolute-offset-based-on-t.patch
