drm/amdgpu: enable FRU device for SMU v13.0.6 (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -14074,6 +14074,7 @@
 	patches.suse/1063-drm-amd-display-Port-replay-vblank-logic-to-DML2.patch
 	patches.suse/1064-drm-amd-display-add-check-in-validate_only-in-dml2.patch
 	patches.suse/1065-drm-amdgpu-update-ib-start-and-size-alignment.patch
+	patches.suse/1066-drm-amdgpu-enable-FRU-device-for-SMU-v13.0.6.patch
 	patches.suse/drm-amdgpu-Fix-potential-null-pointer-derefernce.patch
 	patches.suse/drm-amd-display-Don-t-use-fsleep-for-PSR-exit-waits.patch
 	patches.suse/drm-amdkfd-get-doorbell-s-absolute-offset-based-on-t.patch
