drm/amd/display: enable S/G display for for recent APUs by default (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -14078,6 +14078,7 @@
 	patches.suse/1067-drm-amdgpu-Refactor-FRU-product-information.patch
 	patches.suse/1068-drm-amdgpu-Add-more-FRU-field-information.patch
 	patches.suse/1069-Documentation-amdgpu-Add-FRU-attribute-details.patch
+	patches.suse/1070-drm-amd-display-enable-S-G-display-for-for-recent-AP.patch
 	patches.suse/drm-amdgpu-Fix-potential-null-pointer-derefernce.patch
 	patches.suse/drm-amd-display-Don-t-use-fsleep-for-PSR-exit-waits.patch
 	patches.suse/drm-amdkfd-get-doorbell-s-absolute-offset-based-on-t.patch
