drm/amd/display: Update pmfw_driver_if new structure (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -14082,6 +14082,7 @@
 	patches.suse/drm-amdgpu-Fix-potential-null-pointer-derefernce.patch
 	patches.suse/1072-drm-amd-display-Modify-SMU-message-logs.patch
 	patches.suse/1073-drm-amd-display-VSIF-v3-set-Max-Refresh-Rate.patch
+	patches.suse/1074-drm-amd-display-Update-pmfw_driver_if-new-structure.patch
 	patches.suse/drm-amd-display-Don-t-use-fsleep-for-PSR-exit-waits.patch
 	patches.suse/drm-amdkfd-get-doorbell-s-absolute-offset-based-on-t.patch
 	patches.suse/drm-radeon-fix-a-possible-null-pointer-dereference.patch
