drm/amd/display: Update cursor limits based on SW cursor fallback (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -14087,6 +14087,7 @@
 	patches.suse/1076-drm-amd-display-Revert-drm-amd-display-remove-duplic.patch
 	patches.suse/1077-drm-amd-display-Update-stream-mask.patch
 	patches.suse/1078-drm-amd-display-Update-dml-ssb-from-pmfw-clock-table.patch
+	patches.suse/1079-drm-amd-display-Update-cursor-limits-based-on-SW-cur.patch
 	patches.suse/drm-amd-display-Don-t-use-fsleep-for-PSR-exit-waits.patch
 	patches.suse/drm-amdkfd-get-doorbell-s-absolute-offset-based-on-t.patch
 	patches.suse/drm-radeon-fix-a-possible-null-pointer-dereference.patch
