drm/amd/pm: wait for completion of the EnableGfxImu command (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -14104,6 +14104,7 @@
 	patches.suse/1093-drm-amdgpu-vpe-align-with-mcbp-changes.patch
 	patches.suse/1094-drm-amdgpu-Address-member-gart_placement-not-describ.patch
 	patches.suse/1095-drm-amdgpu-vpe-fix-insert_nop-ops.patch
+	patches.suse/1096-drm-amd-pm-wait-for-completion-of-the-EnableGfxImu-c.patch
 	patches.suse/drm-radeon-fix-a-possible-null-pointer-dereference.patch
 	patches.suse/drm-amdgpu-vkms-fix-a-possible-null-pointer-derefere.patch
 	patches.suse/drm-mediatek-Fix-coverity-issue-with-unintentional-i.patch
