- drm/amd/pm: Use gpu_metrics_v1_4 for SMUv13.0.6 (jsc#PED-3527   jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120   jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069   jsc#PED-6071). - Refresh   patches.suse/drm-amd-pm-Fix-a-memory-leak-on-an-error-path.patch.

--- a/series.conf
+++ b/series.conf
@@ -14108,6 +14108,7 @@
 	patches.suse/1097-drm-amdgpu-Return-EINVAL-when-MMSCH-init-status-inco.patch
 	patches.suse/1098-drm-amd-pm-Update-metric-table-for-smu-v13_0_6.patch
 	patches.suse/1099-drm-amd-pm-Add-gpu_metrics_v1_4.patch
+	patches.suse/1100-drm-amd-pm-Use-gpu_metrics_v1_4-for-SMUv13.0.6.patch
 	patches.suse/drm-radeon-fix-a-possible-null-pointer-dereference.patch
 	patches.suse/drm-amdgpu-vkms-fix-a-possible-null-pointer-derefere.patch
 	patches.suse/drm-mediatek-Fix-coverity-issue-with-unintentional-i.patch
