drm/amd/swsmu: add smu v14_0_0 pmfw if file (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -14114,6 +14114,7 @@
 	patches.suse/1103-drm-amdgpu-umsch-power-on-off-UMSCH-by-DLDO.patch
 	patches.suse/1104-drm-amdgpu-swsmu-add-smu-v14_0_0-driver-if-file.patch
 	patches.suse/1105-drm-amd-swsmu-add-smu-v14_0_0-ppsmc-file.patch
+	patches.suse/1106-drm-amd-swsmu-add-smu-v14_0_0-pmfw-if-file.patch
 	patches.suse/drm-radeon-fix-a-possible-null-pointer-dereference.patch
 	patches.suse/drm-amdgpu-vkms-fix-a-possible-null-pointer-derefere.patch
 	patches.suse/drm-mediatek-Fix-coverity-issue-with-unintentional-i.patch
